<resources>
    <string name="app_name">Car Crash Notifier</string>
    <string name="button_addCarCrash">Add Crash</string>
    <string name="hint_carcrashTitle">Crash Type</string>
    <string name="hint_carcrashDescription">Please add type and time of crash </string>
    <string name="menu_addCarCrash">Add</string>
    <string name="menu_cancelCarCrash">Cancel</string>
    <string name="enter_carcrash_title">Crash Alert!</string>
    <string name="serious">Serious</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>
    <string name="save_carcrash"> Save Crash </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_carcrash_image">Select image</string>
    <string name="change_carcrash_image">Change image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="menu_deleteCarCrash">Delete</string>
    <string name="carcrash_image_placeholder">CarCrash Imagee</string>
    <string name="carcrash_title_placeholder">CarCrash Title</string>
    <string name="carcrash_description_placeholder">CarCrash Description</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_car_crash_maps">Map of all Car Crashes</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="menu_saveCarCrash">Save</string>
    <string name="title_activity_login"> Signup/Login to Car Crash</string>
    <string name="menu_showMap">Show Map</string>
    <string name="menu_logout">Logout</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>